--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
+    "bulma": "^0.9.3",
     "gatsby": "^4.7.2",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-image": "^2.7.0",
     "gatsby-plugin-manifest": "^4.7.0",
-    "gatsby-plugin-mdx": "^3.7.1",
     "gatsby-plugin-netlify-cms": "^6.7.0",
     "gatsby-plugin-react-helmet": "^5.7.0",
     "gatsby-plugin-sass": "^5.7.0",
     "gatsby-plugin-sharp": "^4.7.0",
     "gatsby-plugin-sitemap": "^5.7.0",
     "gatsby-source-filesystem": "^4.7.0",
+    "gatsby-transformer-remark": "^5.8.0",
     "gatsby-transformer-sharp": "^4.7.0",
     "netlify-cms-app": "^2.15.66",
     "react": "^17.0.1",
