--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,7 +14,7 @@ collections:
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
-      - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
+      - {label: "Layout", name: "layout", widget: "hidden", default: "blog-post"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Description", name: "description", widget: "string"}
       - label: "Category"
@@ -24,7 +24,6 @@ collections:
           - { label: "前端技术", value: "frontend"}
           - { label: "游戏生活", value: "game"}
           - { label: "杂谈", value: "misc"}
-      - {label: "Publish Date", name: "publish_date", widget: "datetime"}
-      - {label: "Last Update Date", name: "last_update_date", widget: "datetime"}
+      - {label: "Date", name: "date", widget: "datetime"}
       - {label: "Tags", name: "tags", widget: "list"}
       - {label: "Body", name: "body", widget: "markdown"}
